--- a/coding_practice/CMakeLists.txt
+++ b/coding_practice/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   geometry_msgs
+  visualization_msgs
   basic_lecture
   message_generation
 )
